--- a/lighthouse-curves.qmd
+++ b/lighthouse-curves.qmd
@@ -3,6 +3,8 @@ title: "Lighthouse Light Curves"
 date: "10 July 2024"
 author: "Shih Ching Fu"
 format: html
+execute: 
+  echo: false
 ---
 
 This notebook tries to explain the data quality issues encountered with astronomical light curves using lighthouse light characteristics as an analogy.
@@ -46,34 +48,76 @@ generate_example_gp <- function(kernel_fn, n_obs, n_series, seed, ...) {
 ```
 
 ```{r}
-N_points <- 100 # Number of measurements
+N_points <- 140 # Number of measurements
 N_series <- 3   # Number of lighthouses
 y_amp <- 10     # Amplitude hyperparameter value
 y_se <- 2       # SD of added Gaussian noise
 obs_cadence <- 1/4 # frequency of observing
 
-lc <- generate_example_gp(periodic_kernel, 
+lc1 <- generate_example_gp(periodic_kernel, 
                           n_obs = N_points, 
-                          n_series = N_series, 
-                          seed = 0, 
+                          n_series = 1, 
+                          seed = 1, 
                           sigma = y_amp, 
                           ell = 1, 
-                          T = N_points/4) |> 
-  rename(lighthouse = series) |> 
-  arrange(lighthouse, t) |> 
-  mutate(y = f + rnorm(n = N_points*N_series, 0, y_se),
+                          T = Inf) |> 
+  mutate(series = "A") |> 
+  arrange(t) |> 
+  mutate(y = f + rnorm(n = N_points*1, 0, y_se),
          is_visible = ifelse(t %% (1/obs_cadence) == 0, TRUE, FALSE), # based on observing cadence
-         non_detection = sample(x = c(TRUE, FALSE), size = N_points*N_series, # non-detections
+         non_detection = sample(x = c(TRUE, FALSE), size = N_points*1, # non-detections
                                 replace = TRUE, prob = c(0.4, 0.6)))
-head(lc)
+head(lc1)
 ```
+
+
+```{r}
+lc2 <- generate_example_gp(periodic_kernel, 
+                          n_obs = N_points, 
+                          n_series = 1, 
+                          seed = 2, 
+                          sigma = y_amp, 
+                          ell = 1, 
+                          T = N_points/5) |> 
+  mutate(series = "B") |> 
+  arrange(t) |> 
+  mutate(y = f + rnorm(n = N_points*1, 0, y_se),
+         is_visible = ifelse(t %% (1/obs_cadence) == 0, TRUE, FALSE), # based on observing cadence
+         non_detection = sample(x = c(TRUE, FALSE), size = N_points*1, # non-detections
+                                replace = TRUE, prob = c(0.4, 0.6)))
+head(lc2)
+```
+
+
+```{r}
+lc3 <- generate_example_gp(periodic_kernel, 
+                          n_obs = N_points, 
+                          n_series = 1, 
+                          seed = 3, 
+                          sigma = y_amp, 
+                          ell = 1, 
+                          T = N_points/11) |> 
+  mutate(series = "C") |> 
+  arrange(t) |> 
+  mutate(y = f + rnorm(n = N_points*1, 0, y_se),
+         is_visible = ifelse(t %% (1/obs_cadence) == 0, TRUE, FALSE), # based on observing cadence
+         non_detection = sample(x = c(TRUE, FALSE), size = N_points*1, # non-detections
+                                replace = TRUE, prob = c(0.4, 0.6)))
+head(lc3)
+```
+
+```{r}
+lc <- bind_rows(lc1, lc2, lc3)
+lc
+```
+
 
 ```{r}
 lc |> 
   ggplot() +
-  aes(x = t, y = f, colour = lighthouse) +
+  aes(x = t, y = f, colour = series) +
   geom_line() +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)", 
        y = "Brightness", 
        title = "Lighthouse Characteristics - Continuous", 
@@ -84,9 +128,9 @@ lc |>
 ```{r}
 lc |> 
   ggplot() +
-  aes(x = t, y = f, colour = lighthouse) +
+  aes(x = t, y = f, colour = series) +
   geom_point() +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)", 
        y = "Brightness", 
        title = "Lighthouse Characteristics - Discretised", 
@@ -98,10 +142,10 @@ lc |>
 ```{r}
 lc |> 
   ggplot() +
-  aes(x = t, y = y, colour = lighthouse) +
+  aes(x = t, y = y, colour = series) +
   geom_line(colour = "grey") +
   geom_point() +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)", 
        y = "Brightness",
        title = "Lighthouse Characteristics - Noisy", 
@@ -114,10 +158,10 @@ lc |>
 lc |> 
   filter(is_visible) |> 
   ggplot() +
-  aes(x = t, y = y, colour = lighthouse) +
+  aes(x = t, y = y, colour = series) +
   geom_line(colour = "grey") +
   geom_point() +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)", 
        y = "Brightness", 
        title = "Lighthouse Characteristics - Visible", 
@@ -129,10 +173,10 @@ lc |>
 lc |> 
   filter(is_visible) |> 
   ggplot() +
-  aes(x = t, y = y, colour = lighthouse) +
+  aes(x = t, y = y, colour = series) +
   geom_point(aes(alpha = !non_detection)) +
   geom_line(data = filter(lc, !non_detection & is_visible), colour = "grey") +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)", 
        y = "Brightness", 
        title = "Lighthouse Characteristics - Detected", 
@@ -145,10 +189,10 @@ lc |>
 ```{r}
 lc |> 
   ggplot() +
-  aes(x = t, y = y, colour = lighthouse) +
+  aes(x = t, y = y, colour = series) +
   geom_line(aes(y = f), colour = "grey", alpha = 0.5, linetype = "dashed") +
   geom_point(data = filter(lc, !non_detection & is_visible)) +
-  facet_wrap(vars(lighthouse), ncol = 1) + 
+  facet_wrap(vars(series), ncol = 1) + 
   labs(x = "Time (minutes)",
        y = "Brightness", 
        title = "Lighthouse Characteristics - Observed", 
